@@ -128,6 +128,7 @@ public class TestNGContentHandler extends DefaultHandler {
         if(XmlSuite.PARALLEL_METHODS.equals(parallel)
             || XmlSuite.PARALLEL_TESTS.equals(parallel)
             || XmlSuite.PARALLEL_NONE.equals(parallel)
+            || XmlSuite.PARALLEL_CLASSES.equals(parallel)
             || "true".equals(parallel)
             || "false".equals(parallel)) {
           m_currentSuite.setParallel(parallel);
